# lxir

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
contrib/scripts/: gen_mathfonts.pl  lxirimages.py  lxirlatex.py  runlxir.pl
libdvi/: Makefile.am  Makefile.in  dvidump.c  libdvi.c  libdvi.h
libfontmap/: Makefile.am  Makefile.in  libfontmap.c  libfontmap.h  mathfonts.xml  zapfdingbats.xml
libfontmap/tools/: Makefile.am  Makefile.in
libfontmap/tools/accents/: Makefile.am  Makefile.in  mkaccents.py
libfontmap/tools/common/: find_in_path.c
libfontmap/tools/enc2tbl/: Makefile.am  Makefile.in  adobetbl.h  enc2tbl.h  grammar.c  grammar.h  grammar.y  main.c  mkcharxml.c  parser.c  parser.l
libfontmap/tools/enc2tbl/enc/: amssymba.enc  amssymbb.enc  blackboard.enc  cork.enc  dummy.enc  euex.enc  eufrak.enc  eurosym.enc  gkerkis.enc  latexsym.enc  lxir_default.enc  marvo00.enc  marvo98.enc  ot1.enc  ot1wofl.enc  texmext.enc  texmital.enc  texmsym.enc  textcomp.enc  textt.enc  txmia.enc
libfontmap/tools/tfmlist/: Makefile.am  Makefile.in  patterns.xml  tfmlist.c
libkpathsea/: Makefile.in
libkpathsea/include/kpathsea/: c-auto.h  paths.h  tex-file.h
libkpathsea/patch/: kpathsea.diff
libtfm/: Makefile.am  Makefile.in  libtfm.c  libtfm.h  test_tfm.c  tfm_internal.c  tfm_internal.h
src/: Makefile.am  Makefile.in  config.xml  entities.c  entities.h  ligatures.xml  log2xml.c  log2xml.h  lxir.c  lxir.ggo  postxml.c  table.c  transformations.c  transformations.h  transformations.xml  utf8string.c  utf8string.h
testsuite/: Makefile.am  Makefile.in  test.py
testsuite/config/: unix.exp
testsuite/lxir.basic/: first-test.exp  simple.tex
testsuite/lxir.math/: aa12136-09_1  aa12355-09_1  aa12695-09_1  aa12695-09_2  aa12873-09_1  bar  complex  dot  leftright  leftright2  msub  msubsup  msup  over  parentheses  sqrt  under2
texmf/: Makefile.am  Makefile.in
texmf/css/: Makefile.am  Makefile.in  xhtml.css
texmf/default/: Makefile.am  Makefile.in  accents.xml  encodings.xml  fonts.xml
texmf/tex/: Makefile.am  Makefile.in  alltt_lxir.sty  amsmath_lxir.sty  array_lxir.sty  article_lxir.cls  babel_lxir.sty  book_lxir.cls  cases_lxir.sty  cite_lxir.sty  classes_lxir.dtx  classes_lxir.ins  color_lxir.sty  enumerate_lxir.sty  graphicx_lxir.sty  hyperref_lxir.sty  lxir.dtx  lxir.ins  lxir.sty  lxir_math.tex  lxir_vmath.tex  lxirdoc.sty  lxirtag.sty  multirow_lxir.sty  nameref_lxir.sty  natbib_lxir.sty  report_lxir.cls  rotating_lxir.sty  setspace_lxir.sty  tabularx_lxir.sty  txfonts_lxir.sty  url_lxir.sty  verbatim_lxir.sty  wasysym_lxir.sty
texmf/xslt/: Makefile.am  Makefile.in  biblio2xhtml.xsl  box2xhtml.xsl  clean.xsl  crossref2xhtml.xsl  figure2xhtml.xsl  float2xhtml.xsl  font2xhtml.xsl  fontdetails.xsl  fonttext.xsl  footnote.xsl  footnote2xhtml.xsl  header2xhtml.xsl  linetab.xsl  list2xhtml.xsl  log-enlargesub.xsl  log-fixes.xsl  log-negative.xsl  log-prescript.xsl  math2xhtml.xsl  mathns.xsl  misc2xhtml.xsl  node2element.xsl  par2xhtml.xsl  params.xsl  pseudomath.xsl  section2xhtml.xsl  tabbing2xhtml.xsl  tabular2xhtml.xsl  text2xhtml.xsl  thanks2xhtml.xsl  verbatim2xhtml.xsl  xlatex2xhtml.xsl.in
