texdir = $(TEXMF_LXIR_DIR)

PACKAGES = \
	amsmath_lxir.sty \
	array_lxir.sty \
	babel_lxir.sty \
	color_lxir.sty \
	graphicx_lxir.sty \
	natbib_lxir.sty \
	tabularx_lxir.sty \
	hyperref_lxir.sty \
	url_lxir.sty \
	nameref_lxir.sty \
	txfonts_lxir.sty \
	multirow_lxir.sty \
	rotating_lxir.sty

CORE = \
	lxir.dtx \
	lxir.ins \
	lxir.sty \
	lxir_math.tex \
	lxir_vmath.tex \
	lxirtag.sty \
	classes_lxir.dtx \
	classes_lxir.ins \
	article_lxir.cls \
	book_lxir.cls \
	report_lxir.cls \
	lxirdoc.sty

dist_tex_DATA = $(CORE) $(PACKAGES)

