xsltdir = $(TEXMF_XSLT_DIR)
dist_xslt_DATA = \
	biblio2xhtml.xsl \
	box2xhtml.xsl \
	clean.xsl \
	crossref2xhtml.xsl \
	figure2xhtml.xsl \
	float2xhtml.xsl \
	font2xhtml.xsl \
	fontdetails.xsl \
	fonttext.xsl \
	footnote2xhtml.xsl \
	footnote.xsl \
	header2xhtml.xsl \
	linetab.xsl \
	list2xhtml.xsl \
	math2xhtml.xsl \
	mathns.xsl \
	misc2xhtml.xsl \
	node2element.xsl \
	par2xhtml.xsl \
	params.xsl \
	pseudomath.xsl \
	section2xhtml.xsl \
	tabbing2xhtml.xsl \
	tabular2xhtml.xsl \
	text2xhtml.xsl \
	thanks2xhtml.xsl \
	verbatim2xhtml.xsl
EXTRA_DIST = \
	xlatex2xhtml.xsl.in
xslt_DATA = \
	xlatex2xhtml.xsl
